	2016-04-27  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/stylelib/typhon.mplstyle:

	Increased linewidths in propcycle by 1 as the smallest should be 2.

	2016-04-27  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/stylelib/typhon.mplstyle:

	Automatically change linestyle after cycling through all available colors.
	This extends the number of different styles to 18 (6 colors, 3 linestyles).
	The linewidth for dashed and dotted lines is increased to adjust their look
	in comparison to solid lines.

	2016-04-22  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/__init__.py:

	install_mplstyles() overwrites symlinks and automatically reloads the
	stylesheet library.

	* typhon/plots/stylelib/typhon.mplstyle:

	Replace the default colorcycle with more muted colors.

	2016-04-21  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/__init__.py:

	Added install_mplstyles() to create symbolic links for matplotlib
	stylesheets shipped with typhon.

	* typhon/plots/stylelib: Directory to store matplotlib stylesheets.

	* typhon/plots/stylelib/typhon.mplstyle:

	Matplotlib stylesheet to overwrite the default values for rc params.

2016-04-21  Oliver Lemke  <olemke@core-dump.info>

	* setup.py: Remove author_email. Update homepage url.

2016-04-20  Oliver Lemke  <olemke@core-dump.info>

	* typhon/__init__.py: Set DEVBUILD back to True after release.

2016-04-20  Oliver Lemke  <olemke@core-dump.info>

	* typhon/__init__.py: 0.2.9 Release.

2016-04-05  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/griddedfield.py:

	Added examples on how to create and use a GriddedField object.

2016-03-24  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset.py:

	- Try to show a progressbar to show the progress on reading a large
	amount of data.  Only works when the progressbar module is available —
	see https://pypi.python.org/pypi/progressbar2

	- Fig bug when no fields are mandatory.

2016-03-22  Gerrit Holl  <g.holl@reading.ac.uk>
